--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,7 +1,27 @@
 {
+    "Номер телефона сайта": "8 499 391-84-49",
     "Короткий язык": "RU",
     "Язык": "Русский",
     "Войти": "Войти",
     "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
-    "Обновить страницу": "Обновить страницу"
+    "Обновить страницу": "Обновить страницу",
+    "Логотип сайта Fibo": "Логотип сайта Fibo",
+    "Доставка пасты": "Доставка пасты",
+    "Заказать звонок": "Заказать звонок",
+    "Яндекс еда": "Яндекс еда",
+    "Москва": "Москва",
+    "Время доставки": "Время доставки",
+    "от 31 мин": "от 31 мин",
+    "Корзина": "Корзина",
+    "Пицца": "Пицца",
+    "Паста": "Паста",
+    "Супы": "Супы",
+    "Салаты": "Салаты",
+    "Напитки": "Напитки",
+    "Десерты": "Десерты",
+    "Бакалея": "Бакалея",
+    "Антипасти": "Антипасти",
+    "Акции": "Акции",
+    "Комбо": "Комбо",
+    "Контакты": "Контакты"
 }
