feat: made an animation of the Header collapsing when scrolling

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,5 +23,6 @@
     "Антипасти": "Antipasti",
     "Акции": "Promotions",
     "Комбо": "Combo",
-    "Контакты": "Contacts"
+    "Контакты": "Contacts",
+    "4.8": "4.8"
 }
