--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -23,5 +23,6 @@
     "Антипасти": "Антипасти",
     "Акции": "Акции",
     "Комбо": "Комбо",
-    "Контакты": "Контакты"
+    "Контакты": "Контакты",
+    "4.8": "4.8"
 }
