feat: start making FoodList & create useGetList hook

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,10 +17,10 @@
     "Паста": "Pasta",
     "Супы": "Soups",
     "Салаты": "Salads",
-    "Напитки": "Beverages",
+    "Напитки": "Drinks",
     "Десерты": "Desserts",
     "Бакалея": "Grocery",
-    "Антипасти": "Antipasti",
+    "Закуски": "Snacks",
     "Акции": "Promotions",
     "Комбо": "Combo",
     "Контакты": "Contacts",
