feat: make FoodForm

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,6 +23,5 @@
     "Закуски": "Snacks",
     "Акции": "Promotions",
     "Комбо": "Combo",
-    "Контакты": "Contacts",
-    "4.8": "4.8"
+    "Контакты": "Contacts"
 }
