--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -23,6 +23,5 @@
     "Антипасти": "Антипасти",
     "Акции": "Акции",
     "Комбо": "Комбо",
-    "Контакты": "Контакты",
-    "4.8": "4.8"
+    "Контакты": "Контакты"
 }
